# crashgame

./: .gitignore  ImGui.vcxproj  ImGui.vcxproj.filters  README.md  TextureLoader.vcxproj  TextureLoader.vcxproj.filters  cage.sln  cage.vcxproj  cage.vcxproj.filters  premake5.lua  projgen.bat  turnsys.h
src/include/: AllType.h  Audio.ixx  CMakeLists.txt  CSBinary_generated.h  Consol.cpp0  Editor.ixx  GObjs0.h  GProps.h  Gameprops0.h  GpropExt.h  GraphicUtil.ixx  Macros.h  PCH.h  Test.hpp  app.ixx  audio.h  cfgparser.cpp  cfgparser.h  editor.h  g_prop0.cpp  genhead.bat  main.h  shpso.cpp  shpso.h
src/include/AI/: Config.h  EvulatAction.cpp  EvulatAction.h  Flocking.h  Header.h  PlayerUnitAi.h  algorithm0.cpp  algorithm0.h  imp3.h  imp4.cpp  imp4.h  imps0.h  imps1.hpp
src/include/AssetLoader/: AssetLoader.vcxproj  AssetLoader.vcxproj.filters  GFloader.ixx  GLTFDer.ixx  GlTFLD.h  ImpColl.cpp  Makefile  RenderStr0.h  premake5.lua
src/include/Common/: CSP2CPP.h  Config.h  FirstPersonCamera.cpp  FirstPersonCamera.hpp  FixMath.h  InputController.hpp  InputUtil.h  Math1.h  Sort.h  Switchs.h  Task.h  UtilMT.h  Utility.cpp  Utility.h  UtilityGeo.h  aqdefs.h  components.h  ecs.hpp  math0.h  mathext.h  mathtable.h  span.hpp  syss.hpp  thObser.h
src/include/Graphic/: modelcom.h
src/include/Log/: log.h
src/include/Modules/: audio0.ixx  imp3.ixx  physics.ixx
src/include/Render/: DrawTool.cpp  DrawTool.h  GpuSkin.c  LineRender.cpp  LineRender.h  Mesh.h  RenderCommon.h  RenderSet.ixx  RenderUtil.cpp  RenderUtil.h  Renders0.cpp  Renders0.h  Renders1.cpp  Renders1.h  defArgs.h  (+11 more)
(+107 files in other folders)
